--- a/resources/assets/sass/blog-styles.scss
+++ b/resources/assets/sass/blog-styles.scss
@@ -1,7 +1,13 @@
+html{
+    font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
+}
 /*blog.app.blade.php*/
 .nav-fix {
     margin-left: 5px;
     margin-right: 5px;
+}
+.floating-fix{
+    margin-top: 2px;
 }
 /*blog.post.show.blade.php*/
 .card-image-fix {
