Create Post頁面雛型 Store function 驗證完成 缺回傳後的Error Reback設計

--- a/resources/assets/sass/blog-styles.scss
+++ b/resources/assets/sass/blog-styles.scss
@@ -13,6 +13,11 @@ html{
 .card-image-fix {
     height: 90%;
 }
+/*blog.post.create.blade.php*/
+.card-panel-container {
+    margin-left: 25px;
+    margin-right: 25px;
+}
 /*blog.leftSide.blade.php*/
 .slider-section {
     margin-top: 10px;
