加入動畫 CSS 用更好的方式在Laravel Blade 與 javascript 間 傳遞變數資料

--- a/resources/assets/sass/blog-styles.scss
+++ b/resources/assets/sass/blog-styles.scss
@@ -18,6 +18,9 @@ html {
     margin-left: 25px;
     margin-right: 25px;
 }
+.toast-error {
+    background-color: #ef5350;
+}
 /*blog.leftSide.blade.php*/
 .slider-section {
     margin-top: 10px;
