--- a/resources/assets/sass/blog-styles.scss
+++ b/resources/assets/sass/blog-styles.scss
@@ -3,8 +3,14 @@ html {
 }
 /*blog.app.blade.php*/
 .nav-fix {
+    position: absolute;
+    top :auto;
     margin-left: 5px;
     margin-right: 5px;
+}
+.float-position{
+    bottom: 45px;
+    right: 24px;
 }
 .floating-fix {
     margin-top: 2px;
