--- a/public/css/blog-styles.css
+++ b/public/css/blog-styles.css
@@ -28,6 +28,9 @@ html {
 .category-img-fix {
   max-height: 50% !important; }
 
+.category-video-fix {
+  margin: 20px 20px; }
+
 /*blog.app.blade.php*/
 .nav-fix {
   position: absolute;
@@ -40,7 +43,7 @@ html {
   right: 24px; }
 
 .floating-fix {
-  margin-top: 1.2px; }
+  margin-top: 1.0px; }
 
 /*blog.post.show.blade.php*/
 .card-image-fix {
