--- a/resources/assets/sass/blog-styles.scss
+++ b/resources/assets/sass/blog-styles.scss
@@ -28,7 +28,10 @@ html {
 .category-img-fix{
     max-height: 50% !important;
 }
+.category-video-fix{
+    margin: 20px 20px;
 
+}
 /*blog.app.blade.php*/
 .nav-fix {
     position: absolute;
@@ -41,7 +44,7 @@ html {
     right: 24px;
 }
 .floating-fix {
-    margin-top: 1.2px;
+    margin-top: 1.0px;
 }
 /*blog.post.show.blade.php*/
 .card-image-fix {
