右邊加入分類標籤  弄得稍微好看一點
 	modified:   app/Http/Controllers/Blog/BlogHomeController.php
 	modified:   public/css/blog-styles.css
 	modified:   public/css/blog-styles.css.map
 	modified:   resources/assets/sass/blog-styles.scss
 	modified:   resources/views/blog/leftSide.blade.php
 	modified:   resources/views/blog/rightSide.blade.php

--- a/resources/assets/sass/blog-styles.scss
+++ b/resources/assets/sass/blog-styles.scss
@@ -15,7 +15,7 @@ html {
 .category-container-title{
     background: #ffffff;
     box-shadow: 0 1px 3px 0 rgba(0,0,0,.1);
-    font-size: 22px;
+    font-size: 20px;
     line-height: 25px;
     text-align: center;
     margin-bottom: 0;
@@ -62,4 +62,20 @@ html {
 .slider-section {
     margin-top: 10px;
     margin-bottom: 10px;
+}
+/*blog.rightSide.blade.php*/
+.border-right-red {
+    border-right: 5px solid #e54e7e;
+}
+.border-right-blue {
+    border-right: 5px solid #5c6bc0;
+}
+.border-right-yellow {
+    border-right: 5px solid #f57f17;
+}
+.title-fix{
+    margin-bottom: -5px;
+}
+.collection-fix{
+    border:!important;
 }
