modify top navigation  	modified:   public/css/blog-styles.css  	modified:   public/css/blog-styles.css.map  	modified:   resources/assets/sass/blog-styles.scss  	modified:   resources/views/blog/app.blade.php

--- a/public/css/blog-styles.css
+++ b/public/css/blog-styles.css
@@ -32,11 +32,18 @@ html {
   margin: 20px 20px; }
 
 /*blog.app.blade.php*/
-.nav-fix {
+.logo-fix {
+  font-size: 25px !important; }
+
+.nav-height-fix {
+  height: 55px;
+  line-height: 55px; }
+
+.nav-content-fix {
   position: absolute;
   top: auto;
-  margin-left: 5px;
-  margin-right: 5px; }
+  margin-left: 15px;
+  margin-right: 15px; }
 
 .float-position {
   bottom: 45px;
