--- a/resources/assets/sass/blog-styles.scss
+++ b/resources/assets/sass/blog-styles.scss
@@ -1,18 +1,28 @@
+/*Define All Colors*/
+$colors: (purple : #7e57c2, red : #e54e7e, blue : #5c6bc0, yellow : #f57f17, green : #43a047, brown : #795548,);
 html {
     font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
 }
 /*All Page Maybe Used*/
-.border-top-red{
-    border-top: 2px solid #e54e7e;
+@each $header,$color in $colors {
+    .border-top-#{$header} {
+        border-top: 2px solid $color;
+    }
+    // compile to like this
+    // .border-top-purple { border-top: 2px solid #7e57c2; }
 }
-.border-top-blue{
-    border-top: 2px solid #5c6bc0;
+@each $header,$color in $colors {
+    .border-right-#{$header} {
+        border-right: 5px solid $color;
+    }
+    // compile to like this
+    // .border-right-purple { border-right: 5px solid $purple; }
 }
-.category-container{
+.category-container {
     box-shadow: 0 1px 3px 0 rgba(0,0,0,.1);
     background: #f9f9f9;
 }
-.category-container-title{
+.category-container-title {
     background: #ffffff;
     box-shadow: 0 1px 3px 0 rgba(0,0,0,.1);
     font-size: 20px;
@@ -21,32 +31,31 @@ html {
     margin-bottom: 0;
     padding: 15px 15px 18px;
 }
-.category-card-fix{
-    margin: 20px 20px 20px;
-    box-shadow: 0 0px 0px 0 rgba(0,0,0,.1);
+.category-card-fix {
+    margin: 20px;
+    box-shadow: 0 0 0 0 rgba(0,0,0,.1);
 }
-.category-img-fix{
+.category-img-fix {
     max-height: 50% !important;
 }
-.category-video-fix{
-    margin: 20px 20px;
-
+.category-video-fix {
+    margin: 20px;
 }
 /*blog.app.blade.php*/
-.logo-fix{
+.logo-fix {
     font-size: 25px !important;
 }
-.nav-height-fix{
+.nav-height-fix {
     height: 55px;
     line-height: 55px;
 }
 .nav-content-fix {
     position: absolute;
-    top :auto;
+    top: auto;
     margin-left: 15px;
     margin-right: 15px;
 }
-.float-position{
+.float-position {
     bottom: 45px;
     right: 24px;
 }
@@ -71,18 +80,9 @@ html {
     margin-bottom: 10px;
 }
 /*blog.rightSide.blade.php*/
-.border-right-red {
-    border-right: 5px solid #e54e7e;
-}
-.border-right-blue {
-    border-right: 5px solid #5c6bc0;
-}
-.border-right-yellow {
-    border-right: 5px solid #f57f17;
-}
-.title-fix{
+.title-fix {
     margin-bottom: -5px;
 }
-.collection-fix{
-    border:!important;
+.collection-fix {
+    border: !important;
 }
