1.修正右上方NavICON的位置 2.左邊版型調整 3.有些變數傳遞改在Contruct完成 	modified:   app/Http/Controllers/Blog/BlogHomeController.php 	modified:   app/Http/Controllers/Blog/PostController.php 	modified:   database/seeds/CategorySeeder.php 	modified:   public/css/blog-styles.css 	modified:   public/css/blog-styles.css.map 	modified:   resources/assets/sass/blog-styles.scss 	modified:   resources/views/blog/app.blade.php 	modified:   resources/views/blog/leftSide.blade.php

--- a/public/css/blog-styles.css
+++ b/public/css/blog-styles.css
@@ -53,11 +53,11 @@ html {
   padding: 15px 15px 18px; }
 
 .category-card-fix {
-  margin: 20px;
+  margin: 20px 35px;
   box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.1); }
 
 .category-img-fix {
-  max-height: 50% !important; }
+  max-height: 200px !important; }
 
 .category-video-fix {
   margin: 20px; }
@@ -65,6 +65,10 @@ html {
 /*blog.app.blade.php*/
 .logo-fix {
   font-size: 25px !important; }
+
+.nav-icon-fix {
+  height: 55px !important;
+  line-height: 55px !important; }
 
 .nav-height-fix {
   height: 55px;
