--- a/public/css/blog-styles.css
+++ b/public/css/blog-styles.css
@@ -60,7 +60,7 @@ html {
   max-height: 200px !important; }
 
 .horizontal-img-fix {
-  max-weight: 100px !important; }
+  max-width: 180px !important; }
 
 .category-video-fix {
   margin: 20px; }
