--- a/resources/assets/sass/blog-styles.scss
+++ b/resources/assets/sass/blog-styles.scss
@@ -47,7 +47,7 @@ html {
     max-height: 200px !important;
 }
 .horizontal-img-fix{
-    max-weight: 100px !important;
+    max-width: 180px !important;
 }
 .category-video-fix {
     margin: 20px;
