--- a/public/css/blog-styles.css
+++ b/public/css/blog-styles.css
@@ -131,7 +131,11 @@ html {
 
 .carousel-item-container {
   height: 120px;
-  background: blue;
-  color: white; }
+  background: white;
+  color: white;
+  box-shadow: 0 5px 9px 0 rgba(0, 0, 0, 0.1); }
+
+.carrousel-img {
+  padding: 5px 8px; }
 
 /*# sourceMappingURL=blog-styles.css.map */
