--- a/public/css/blog-styles.css
+++ b/public/css/blog-styles.css
@@ -47,7 +47,7 @@ html {
   background: #ffffff;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
   font-size: 20px;
-  line-height: 25px;
+  line-height: 18px;
   text-align: center;
   margin-bottom: 0;
   padding: 15px 15px 18px; }
@@ -140,5 +140,17 @@ html {
 .carrousel-img {
   height: 130px !important;
   padding: 5px 8px; }
+
+.module-1 {
+  background: transparent;
+  font-weight: bold;
+  text-align: center !important;
+  text-shadow: 0px 0px 12px #795548;
+  color: white;
+  height: 150px; }
+
+.module-text {
+  position: relative;
+  left: 110px; }
 
 /*# sourceMappingURL=blog-styles.css.map */
