--- a/public/css/blog-styles.css
+++ b/public/css/blog-styles.css
@@ -1,7 +1,8 @@
+@charset "UTF-8";
 /*Define All Colors*/
 /*All Page Maybe Used*/
 html {
-  font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif; }
+  font-family: 'Roboto', 'Helvetica', '微軟正黑體', 'Microsoft JhengHei' ,'Arial', sans-serif; }
 
 .border-top-purple {
   border-top: 2px solid #7e57c2; }
@@ -145,7 +146,7 @@ html {
   background: transparent;
   font-weight: bold;
   text-align: center !important;
-  text-shadow: 0px 0px 12px #795548;
+  text-shadow: 0 0 12px #795548;
   color: white;
   height: 150px; }
 
