--- a/public/css/blog-styles.css
+++ b/public/css/blog-styles.css
@@ -4,6 +4,12 @@
 html {
   font-family: 'Roboto', 'Helvetica', '微軟正黑體', 'Microsoft JhengHei' ,'Arial', sans-serif; }
 
+a {
+  color: #5c6bc0; }
+
+.border-top-text-grey {
+  border-top: 2px solid #424242; }
+
 .border-top-purple {
   border-top: 2px solid #7e57c2; }
 
@@ -21,6 +27,9 @@ html {
 
 .border-top-brown {
   border-top: 2px solid #795548; }
+
+.border-right-text-grey {
+  border-right: 5px solid #424242; }
 
 .border-right-purple {
   border-right: 5px solid #7e57c2; }
@@ -93,7 +102,27 @@ html {
 
 /*blog.article.show.blade.php*/
 .card-image-fix {
-  height: 90%; }
+  height: 500px; }
+
+.card-show-title {
+  color: #212121;
+  margin-top: 20px;
+  margin-left: 55px;
+  font-size: 300%; }
+
+.card-show-category {
+  font-weight: bold;
+  position: relative;
+  bottom: -25px;
+  margin-top: 20px;
+  margin-left: 55px; }
+
+.show-date {
+  margin-right: 15px; }
+
+.card-content-fix {
+  color: #424242;
+  padding: 100px !important; }
 
 /*blog.article.create.blade.php*/
 .card-panel-container {
