--- a/resources/assets/sass/blog-styles.scss
+++ b/resources/assets/sass/blog-styles.scss
@@ -1,32 +1,11 @@
-/*Define All Colors*/
-$colors: (text-grey : #424242,purple : #7e57c2, red : #e54e7e, blue : #5c6bc0, yellow : #f57f17, green : #43a047, brown : #795548,);
-@function color($key) {
-     @if map-has-key($colors, $key){
-        @return map-get($colors, $key);
-    }
-    @warn "Unknown `#{$key}` in $colors.";
-    @return null;
-}
+@import "blog-define";
+@import "blog-index";
 /*All Page Maybe Used*/
 html {
     font-family: 'Roboto', 'Helvetica', '微軟正黑體', 'Microsoft JhengHei' ,'Arial', sans-serif;
 }
 a {
     color:color(blue);
-}
-@each $header,$color in $colors {
-    .border-top-#{$header} {
-        border-top: 2px solid $color;
-    }
-    // compile to like this
-    // .border-top-purple { border-top: 2px solid #7e57c2; }
-}
-@each $header,$color in $colors {
-    .border-right-#{$header} {
-        border-right: 5px solid $color;
-    }
-    // compile to like this
-    // .border-right-purple { border-right: 5px solid $purple; }
 }
 .category-container {
     box-shadow: 0 1px 3px 0 rgba(0,0,0,.1);
@@ -121,7 +100,8 @@ a {
     margin-bottom: -5px;
 }
 .search-input {
-    width: calc(80%) !important;
+    display: inline-block;
+    width: calc( 80% - 20px) !important;
 }
 .search-icon-fix {
     top: 12px !important;
@@ -153,12 +133,14 @@ a {
 .module-1 {
     background: transparent;
     font-weight: bold;
-    text-align: center !important;
+    display: inline-block;
+    text-align: center;
     text-shadow: 0 0 12px color(brown);
     color: white;
+    width: 100%;
     height: 150px;
 }
 .module-text {
     position: relative;
-    left: 110px;
+    transform:translateY(170%);
 }
