--- a/resources/assets/sass/blog-index.scss
+++ b/resources/assets/sass/blog-index.scss
@@ -1,22 +1,28 @@
 // local define
-
 //section class
 .article {
     margin-top: 65px;
 }
-.panel {
-    border-radius: 2px;
-    border: 0;
-    -webkit-box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.12), 0 1px 6px 0 rgba(0, 0, 0, 0.12);
-    box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.12), 0 1px 6px 0 rgba(0, 0, 0, 0.12);
-}
-.tags-container{
+
+.tags-container {
     padding-left: 20px;
     padding-top: 5px;
     padding-bottom: 5px;
-    border-top: 0px;
-    border-left: 0px;
-    border-right: 0px;
-    border-bottom:1px  rgba(80%,80%,90%,0.4);
-    border-style:solid;
+    border-top: 0;
+    border-left: 0;
+    border-right: 0;
+    border-bottom: 1px rgba(80%,80%,90%,0.4);
+    border-style: solid;
+    min-height: 50px;
+}
+
+.tag-element {
+    position: relative;
+    top: 8px;
+}
+
+.category {
+    margin-top: 9px;
+    font-weight: 400 !important;
+    font-size: 0.85rem !important;
 }
