1.解決tag會溢位的問題  	modified:   public/css/blog-styles.css  	modified:   public/css/blog-styles.css.map  	modified:   resources/assets/sass/blog-styles.scss  	modified:   resources/views/blog/partials/leftSide.blade.php

--- a/public/css/blog-styles.css
+++ b/public/css/blog-styles.css
@@ -196,7 +196,7 @@ a {
   background-color: #CDEAEA;
   color: #333333;
   font-size: 12px;
-  padding: 4px 12px;
+  padding: 2px 12px 2px;
   border-radius: 16px;
   font-weight: 400; }
 
