--- a/public/css/blog-styles.css
+++ b/public/css/blog-styles.css
@@ -185,6 +185,9 @@
   max-height: 220px;
   overflow: hidden; }
 
+.create-tag-span {
+  margin-right: 10px; }
+
 /*All Page Maybe Used*/
 html {
   font-family: 'Roboto', 'Helvetica', '微軟正黑體', 'Microsoft JhengHei' ,'Arial', sans-serif; }
