1. 新建了Style Model (包含其migration、Seeder) 2. 寫了Style的單元測試 3. Style為多形關聯 可與各個不同Model連結 4. Style是為了儲存其樣式表(對應到自己定義的Colors) 5. 自己定義的顏色於 blog-define.scss的 color陣列 6. 加入新顏色樣式的流程目前為 : 6-1 於blog-define.scss定義新顏色色碼 6-2 於styles表中加入對應的資料 (目前只能用Seeder加入，應該要在後台能夠增加) 6-3 應該要多加一點顏色  	modified:   app/Articles/Category.php  	new file:   app/Articles/Style.php  	modified:   app/Articles/Tag.php  	modified:   database/factories/ModelFactory.php  	modified:   database/migrations/2016_07_28_120000_create_categories_table.php  	new file:   database/migrations/2016_09_29_204751_create_styles_table.php  	modified:   database/seeds/CategorySeeder.php  	modified:   database/seeds/CommentSeeder.php  	modified:   database/seeds/DatabaseSeeder.php  	new file:   database/seeds/StyleSeeder.php  	modified:   public/css/blog-styles.css  	modified:   public/css/blog-styles.css.map  	modified:   resources/assets/sass/blog-define.scss  	modified:   resources/views/blog/category/show.blade.php  	modified:   resources/views/blog/partials/leftSide.blade.php  	modified:   resources/views/blog/partials/rightSide.blade.php  	modified:   resources/views/blog/tag/show.blade.php  	new file:   tests/units/models/StyleTest.php

--- a/public/css/blog-styles.css
+++ b/public/css/blog-styles.css
@@ -6,6 +6,12 @@
 .bcolor-text-grey:hover {
   background-color: #e65100 !important; }
 
+.bcolor-default {
+  background-color: #00695c !important; }
+
+.bcolor-default:hover {
+  background-color: #e65100 !important; }
+
 .bcolor-purple {
   background-color: #7e57c2 !important; }
 
@@ -51,6 +57,9 @@
 .text-grey {
   color: #424242 !important; }
 
+.default {
+  color: #00695c !important; }
+
 .purple {
   color: #7e57c2 !important; }
 
@@ -75,6 +84,9 @@
 .border-top-text-grey {
   border-top: 2px solid #424242; }
 
+.border-top-default {
+  border-top: 2px solid #00695c; }
+
 .border-top-purple {
   border-top: 2px solid #7e57c2; }
 
@@ -98,6 +110,9 @@
 
 .border-right-text-grey {
   border-right: 5px solid #424242; }
+
+.border-right-default {
+  border-right: 5px solid #00695c; }
 
 .border-right-purple {
   border-right: 5px solid #7e57c2; }
