--- a/resources/assets/sass/blog-define.scss
+++ b/resources/assets/sass/blog-define.scss
@@ -1,5 +1,5 @@
 /*Define All Colors*/
-$colors: (text-grey : #424242,purple : #7e57c2, red : #e54e7e, blue : #5c6bc0, yellow : #f57f17, green : #43a047, brown : #795548, orange : #e65100,);
+$colors: (text-grey : #424242, default : #00695c, purple : #7e57c2, red : #e54e7e, blue : #5c6bc0, yellow : #f57f17, green : #43a047, brown : #795548, orange : #e65100,);
 
 @function color($key) {
      @if map-has-key($colors, $key){
