1 某個文章更新的時候，系統會誤認為是相同的文章標題，而自動填了尾數黃清秀 2 前台Article Show內的圖片RWD失效黃清秀 3 前台Article Edit 500Error黃清秀 4 navbar抽換成vue
 	modified:   app/Articles/Article.php
 	modified:   app/Articles/Category.php
 	modified:   app/Articles/Tag.php
 	modified:   app/Http/Controllers/Blog/ArticleController.php
 	new file:   app/Presenters/AuthPresenter.php
 	modified:   gulpfile.js
 	modified:   public/css/blog-styles.css
 	modified:   public/css/blog-styles.css.map
 	modified:   public/css/libs.css
 	new file:   public/js/app.js
 	modified:   public/js/blog-styles.js
 	modified:   public/js/libs.js
 	modified:   resources/assets/js/app.js
 	modified:   resources/assets/js/bootstrap.js
 	deleted:    resources/assets/js/components/Example.vue
 	new file:   resources/assets/js/components/Navbar.vue
 	new file:   resources/assets/sass/blog-show-article.scss
 	modified:   resources/assets/sass/blog-styles.scss
 	modified:   resources/views/blog/article/create.blade.php
 	modified:   resources/views/blog/article/edit.blade.php
 	modified:   resources/views/blog/layouts/app.blade.php
 	new file:   storage/debugbar/.gitignore
 	modified:   tests/integrations/LoginPageTest.php
 	modified:   tests/units/models/ArticleTest.php
 	modified:   tests/units/models/CategoryTest.php
 	modified:   tests/units/models/TagTest.php

--- a/resources/assets/sass/blog-styles.scss
+++ b/resources/assets/sass/blog-styles.scss
@@ -2,6 +2,7 @@
 @import "blog-index";
 @import "blog-category";
 @import "blog-create-article";
+@import "blog-show-article";
 /*All Page Maybe Used*/
 html {
     font-family: 'Roboto', 'Helvetica', '微軟正黑體', 'Microsoft JhengHei' ,'Arial', sans-serif;
