--- a/resources/assets/sass/blog-styles.scss
+++ b/resources/assets/sass/blog-styles.scss
@@ -10,6 +10,13 @@ html {
 a {
     color:color(blue);
 }
+.loading-nav{
+    top: 0;
+    position: fixed;
+}
+.main-container{
+    margin-top: 65px;
+}
 .tag{
     background-color: #CDEAEA;
     color : #333333;
@@ -59,6 +66,9 @@ a {
 .nav-height-fix {
     height: 55px;
     line-height: 55px;
+    z-index: 999;
+    top: 0;
+    position: fixed;
 }
 .nav-content-fix {
     position: absolute;
