--- a/public/css/blog-styles.css
+++ b/public/css/blog-styles.css
@@ -3919,8 +3919,15 @@ a {
   color: #2196f3; }
 
 .loading-nav {
-  top: 0;
-  position: fixed; }
+  width: 100px;
+  height: 100px;
+  background-color: red;
+  -webkit-animation-name: shine;
+  /* Safari 4.0 - 8.0 */
+  -webkit-animation-duration: 4s;
+  /* Safari 4.0 - 8.0 */
+  animation-name: shine;
+  animation-duration: 4s; }
 
 .main-container {
   margin-top: 65px; }
@@ -4083,5 +4090,17 @@ a {
   position: relative;
   -webkit-transform: translateY(170%);
   transform: translateY(170%); }
+
+@-webkit-keyframes $animationName {
+  0% {
+    color: #f8d2c0; }
+  100% {
+    color: #0f0; } }
+
+@keyframes $animationName {
+  0% {
+    color: #f8d2c0; }
+  100% {
+    color: #0f0; } }
 
 /*# sourceMappingURL=blog-styles.css.map */
